fix: style menu spacing

--- a/studio/src/app/components/core/app-menu/app-menu.scss
+++ b/studio/src/app/components/core/app-menu/app-menu.scss
@@ -13,7 +13,7 @@ ion-menu {
         }
 
         &.remote {
-          margin: 2px 0;
+          margin: 6px 0;
         }
       }
     }
@@ -22,8 +22,7 @@ ion-menu {
       border: 0;
       box-shadow: none;
       border-radius: 0;
-      margin: 0;
-      height: 40px;
+      margin: 4px 0 0;
 
       > article {
         background: transparent;
